--- a/lang/hu/messages.po
+++ b/lang/hu/messages.po
@@ -19,7 +19,7 @@ msgstr ""
 
 #: dashboard/dutil.js:237
 msgid "%.1f kph"
-msgstr ""
+msgstr "%.1f km/h"
 
 #: dashboard/dutil.js:258
 msgid "%d s"
@@ -48,26 +48,26 @@ msgstr ""
 #: dashboard/avl_unit.js:263 dashboard/avl_unit.js:249
 #: dashboard/avl_unit.js:300 dashboard/avl_object.js:325
 msgid "Name"
-msgstr ""
+msgstr "Jármű"
 
 #: dashboard/avl_unit.js:266 dashboard/avl_unit.js:252
 #: dashboard/avl_unit.js:303 dashboard/avl_object.js:328
 msgid "Speed"
-msgstr ""
+msgstr "Sebesség"
 
 #: dashboard/dutil.js:96 dashboard/dutil.js:113 dashboard/dutil.js:145
 #: dashboard/dutil.js:149
 msgid "Geofences"
-msgstr ""
+msgstr "Geozónák"
 
 #: dashboard/avl_unit.js:105 dashboard/avl_unit.js:91
 #: dashboard/avl_unit.js:102 dashboard/avl_object.js:104
 msgid "Visits"
-msgstr ""
+msgstr "Terület érintés"
 
 #: dashboard/avl_unit.js:224
 msgid " kph"
-msgstr ""
+msgstr "km/h"
 
 #: dashboard/dutil.js:273 dashboard/dutil.js:348 dashboard/dutil.js:443
 #: dashboard/dutil.js:356 dashboard/dutil.js:455 dashboard/dutil.js:364
@@ -116,56 +116,56 @@ msgstr ""
 #: dashboard/dutil.js:125 dashboard/dutil.js:128 dashboard/dutil.js:131
 #: dashboard/dutil.js:134
 msgid "Fuel consumption"
-msgstr ""
+msgstr "Fogyasztás"
 
 #: dashboard/dutil.js:87 dashboard/dutil.js:104 dashboard/dutil.js:136
 #: dashboard/dutil.js:140
 msgid "Average speed"
-msgstr ""
+msgstr "Átlag sebesség"
 
 #: dashboard/dutil.js:90 dashboard/dutil.js:107 dashboard/dutil.js:139
 #: dashboard/dutil.js:143
 msgid "Maximum speed"
-msgstr ""
+msgstr "Max. sebesség"
 
 #: dashboard/dutil.js:93 dashboard/dutil.js:110 dashboard/dutil.js:142
 #: dashboard/dutil.js:146
 msgid "Idling"
-msgstr ""
+msgstr "Üresjárat"
 
 #: dashboard/avl_unit.js:104 dashboard/avl_unit.js:90
 #: dashboard/avl_unit.js:101 dashboard/avl_object.js:103
 msgid "Geofence"
-msgstr ""
+msgstr "Geozóna"
 
 #: dashboard/avl_unit.js:264 dashboard/avl_unit.js:250
 #: dashboard/avl_unit.js:301 dashboard/avl_object.js:326
 msgid "Location"
-msgstr ""
+msgstr "Pozíció"
 
 #: dashboard/avl_unit.js:265 dashboard/avl_unit.js:251
 #: dashboard/avl_unit.js:302 dashboard/avl_object.js:327
 msgid "Last message"
-msgstr ""
+msgstr "Utolsó üzenet"
 
 #: dashboard/dutil.js:75 dashboard/dutil.js:74 dashboard/dutil.js:106
 #: dashboard/dutil.js:110
 msgid "Units"
-msgstr ""
+msgstr "Járművek"
 
 #: dashboard/dutil.js:78 dashboard/dutil.js:77 dashboard/dutil.js:109
 #: dashboard/dutil.js:113
 msgid "Mileage"
-msgstr ""
+msgstr "Futott kilométer"
 
 #: dashboard/dutil.js:84 dashboard/dutil.js:101 dashboard/dutil.js:133
 #: dashboard/dutil.js:137
 msgid "Engine hours"
-msgstr ""
+msgstr "Gyújtáson töltött idő"
 
 #: dashboard/dutil.js:99 dashboard/dutil.js:148 dashboard/dutil.js:152
 msgid "Time in trips"
-msgstr ""
+msgstr "Menetidő"
 
 #: dashboard/dutil.js:188 dashboard/dutil.js:271 dashboard/dutil.js:279
 #: dashboard/dutil.js:287 dashboard/dutil.js:285
@@ -195,7 +195,7 @@ msgstr ""
 #: dashboard/dutil.js:323 dashboard/dutil.js:398 dashboard/dutil.js:409
 #: dashboard/dutil.js:417 dashboard/dutil.js:415
 msgid "Time"
-msgstr ""
+msgstr "Idő"
 
 #: dashboard/dutil.js:326 dashboard/dutil.js:401 dashboard/dutil.js:413
 #: dashboard/dutil.js:421 dashboard/dutil.js:419
@@ -235,188 +235,188 @@ msgstr ""
 #: dashboard/avl_unit.js:257 dashboard/avl_unit.js:308
 #: dashboard/avl_object.js:333
 msgid "Sunday"
-msgstr ""
+msgstr "Vasárnap"
 
 #: dashboard/avl_unit.js:258 dashboard/avl_unit.js:309
 #: dashboard/avl_object.js:334
 msgid "Monday"
-msgstr ""
+msgstr "Hétfő"
 
 #: dashboard/avl_unit.js:259 dashboard/avl_unit.js:310
 #: dashboard/avl_object.js:335
 msgid "Tuesday"
-msgstr ""
+msgstr "Kedd"
 
 #: dashboard/avl_unit.js:260 dashboard/avl_unit.js:311
 #: dashboard/avl_object.js:336
 msgid "Wednesday"
-msgstr ""
+msgstr "Szerda"
 
 #: dashboard/avl_unit.js:261 dashboard/avl_unit.js:312
 #: dashboard/avl_object.js:337
 msgid "Thursday"
-msgstr ""
+msgstr "Csütörtök"
 
 #: dashboard/avl_unit.js:262 dashboard/avl_unit.js:313
 #: dashboard/avl_object.js:338
 msgid "Friday"
-msgstr ""
+msgstr "Péntek"
 
 #: dashboard/avl_unit.js:263 dashboard/avl_unit.js:314
 #: dashboard/avl_object.js:339
 msgid "Saturday"
-msgstr ""
+msgstr "Szombat"
 
 #: dashboard/avl_unit.js:266 dashboard/avl_unit.js:317
 #: dashboard/avl_object.js:342
 msgid "Sun"
-msgstr ""
+msgstr "V"
 
 #: dashboard/avl_unit.js:267 dashboard/avl_unit.js:318
 #: dashboard/avl_object.js:343
 msgid "Mon"
-msgstr ""
+msgstr "H"
 
 #: dashboard/avl_unit.js:268 dashboard/avl_unit.js:319
 #: dashboard/avl_object.js:344
 msgid "Tue"
-msgstr ""
+msgstr "K"
 
 #: dashboard/avl_unit.js:269 dashboard/avl_unit.js:320
 #: dashboard/avl_object.js:345
 msgid "Wed"
-msgstr ""
+msgstr "Sze"
 
 #: dashboard/avl_unit.js:270 dashboard/avl_unit.js:321
 #: dashboard/avl_object.js:346
 msgid "Thu"
-msgstr ""
+msgstr "Cs"
 
 #: dashboard/avl_unit.js:271 dashboard/avl_unit.js:322
 #: dashboard/avl_object.js:347
 msgid "Fri"
-msgstr ""
+msgstr "P"
 
 #: dashboard/avl_unit.js:272 dashboard/avl_unit.js:323
 #: dashboard/avl_object.js:348
 msgid "Sat"
-msgstr ""
+msgstr "Szo"
 
 #: dashboard/avl_unit.js:275 dashboard/avl_unit.js:326
 #: dashboard/avl_object.js:351
 msgid "January"
-msgstr ""
+msgstr "Január"
 
 #: dashboard/avl_unit.js:276 dashboard/avl_unit.js:327
 #: dashboard/avl_object.js:352
 msgid "February"
-msgstr ""
+msgstr "Február"
 
 #: dashboard/avl_unit.js:277 dashboard/avl_unit.js:328
 #: dashboard/avl_object.js:353
 msgid "March"
-msgstr ""
+msgstr "Március"
 
 #: dashboard/avl_unit.js:278 dashboard/avl_unit.js:329
 #: dashboard/avl_object.js:354
 msgid "April"
-msgstr ""
+msgstr "Április"
 
 #: dashboard/avl_unit.js:279 dashboard/avl_unit.js:293
 #: dashboard/avl_unit.js:330 dashboard/avl_unit.js:344
 #: dashboard/avl_object.js:355 dashboard/avl_object.js:369
 msgid "May"
-msgstr ""
+msgstr "Május"
 
 #: dashboard/avl_unit.js:280 dashboard/avl_unit.js:331
 #: dashboard/avl_object.js:356
 msgid "June"
-msgstr ""
+msgstr "Június"
 
 #: dashboard/avl_unit.js:281 dashboard/avl_unit.js:332
 #: dashboard/avl_object.js:357
 msgid "July"
-msgstr ""
+msgstr "Július"
 
 #: dashboard/avl_unit.js:282 dashboard/avl_unit.js:333
 #: dashboard/avl_object.js:358
 msgid "August"
-msgstr ""
+msgstr "Augusztus"
 
 #: dashboard/avl_unit.js:283 dashboard/avl_unit.js:334
 #: dashboard/avl_object.js:359
 msgid "September"
-msgstr ""
+msgstr "Szeptember"
 
 #: dashboard/avl_unit.js:284 dashboard/avl_unit.js:335
 #: dashboard/avl_object.js:360
 msgid "October"
-msgstr ""
+msgstr "Október"
 
 #: dashboard/avl_unit.js:285 dashboard/avl_unit.js:336
 #: dashboard/avl_object.js:361
 msgid "November"
-msgstr ""
+msgstr "November"
 
 #: dashboard/avl_unit.js:286 dashboard/avl_unit.js:337
 #: dashboard/avl_object.js:362
 msgid "December"
-msgstr ""
+msgstr "December"
 
 #: dashboard/avl_unit.js:289 dashboard/avl_unit.js:340
 #: dashboard/avl_object.js:365
 msgid "Jan"
-msgstr ""
+msgstr "Jan"
 
 #: dashboard/avl_unit.js:290 dashboard/avl_unit.js:341
 #: dashboard/avl_object.js:366
 msgid "Feb"
-msgstr ""
+msgstr "Febr"
 
 #: dashboard/avl_unit.js:291 dashboard/avl_unit.js:342
 #: dashboard/avl_object.js:367
 msgid "Mar"
-msgstr ""
+msgstr "Márc"
 
 #: dashboard/avl_unit.js:292 dashboard/avl_unit.js:343
 #: dashboard/avl_object.js:368
 msgid "Apr"
-msgstr ""
+msgstr "Ápr"
 
 #: dashboard/avl_unit.js:294 dashboard/avl_unit.js:345
 #: dashboard/avl_object.js:370
 msgid "Jun"
-msgstr ""
+msgstr "Jún"
 
 #: dashboard/avl_unit.js:295 dashboard/avl_unit.js:346
 #: dashboard/avl_object.js:371
 msgid "Jul"
-msgstr ""
+msgstr "Júl"
 
 #: dashboard/avl_unit.js:296 dashboard/avl_unit.js:347
 #: dashboard/avl_object.js:372
 msgid "Aug"
-msgstr ""
+msgstr "Aug"
 
 #: dashboard/avl_unit.js:297 dashboard/avl_unit.js:348
 #: dashboard/avl_object.js:373
 msgid "Sep"
-msgstr ""
+msgstr "Szept"
 
 #: dashboard/avl_unit.js:298 dashboard/avl_unit.js:349
 #: dashboard/avl_object.js:374
 msgid "Oct"
-msgstr ""
+msgstr "Okt"
 
 #: dashboard/avl_unit.js:299 dashboard/avl_unit.js:350
 #: dashboard/avl_object.js:375
 msgid "Nov"
-msgstr ""
+msgstr "Nov"
 
 #: dashboard/avl_unit.js:300 dashboard/avl_unit.js:351
 #: dashboard/avl_object.js:376
 msgid "Dec"
-msgstr ""
+msgstr "Dec"
 
 #: dashboard/avl_unit.js:302 dashboard/avl_unit.js:353
 #: dashboard/avl_object.js:378
@@ -442,43 +442,43 @@ msgstr ""
 #: dashboard/dutil.js:119 dashboard/dutil.js:188 dashboard/dutil.js:196
 #: dashboard/dutil.js:194
 msgid "by ImpFCS"
-msgstr ""
+msgstr "Átfolyásmérő"
 
 #: dashboard/dutil.js:86 dashboard/dutil.js:118 dashboard/dutil.js:183
 #: dashboard/dutil.js:122 dashboard/dutil.js:191 dashboard/dutil.js:199
 #: dashboard/dutil.js:197
 msgid "by AbsFCS"
-msgstr ""
+msgstr "FMS1"
 
 #: dashboard/dutil.js:89 dashboard/dutil.js:121 dashboard/dutil.js:186
 #: dashboard/dutil.js:125 dashboard/dutil.js:194 dashboard/dutil.js:202
 #: dashboard/dutil.js:200
 msgid "by InsFCS"
-msgstr ""
+msgstr "FMS2"
 
 #: dashboard/dutil.js:92 dashboard/dutil.js:124 dashboard/dutil.js:189
 #: dashboard/dutil.js:128 dashboard/dutil.js:197 dashboard/dutil.js:205
 #: dashboard/dutil.js:203
 msgid "by FLS"
-msgstr ""
+msgstr "Szonda"
 
 #: dashboard/dutil.js:95 dashboard/dutil.js:127 dashboard/dutil.js:192
 #: dashboard/dutil.js:131 dashboard/dutil.js:200 dashboard/dutil.js:208
 #: dashboard/dutil.js:206
 msgid "by math"
-msgstr ""
+msgstr "Norma"
 
 #: dashboard/dutil.js:98 dashboard/dutil.js:130 dashboard/dutil.js:195
 #: dashboard/dutil.js:134 dashboard/dutil.js:203 dashboard/dutil.js:211
 #: dashboard/dutil.js:209
 msgid "by rates"
-msgstr ""
+msgstr "Téli/nyári norma"
 
 msgid "Unit"
-msgstr ""
+msgstr "Jármű"
 
 msgid "Unit group"
-msgstr ""
+msgstr "Járműcsoport"
 
 #: dashboard/avl_object_double_charts.js:125
 #: dashboard/avl_object_double_charts.js:132
@@ -489,20 +489,20 @@ msgstr ""
 #: dashboard/avl_object_double_charts.js:211
 #: dashboard/avl_object_double_charts.js:217
 msgid "All units"
-msgstr ""
+msgstr "Minden jármű"
 
 #: dashboard/dutil.js:166
 msgid "top"
-msgstr ""
+msgstr "első"
 
 #: dashboard/dutil.js:168
 msgid "last"
-msgstr ""
+msgstr "utolsó"
 
 #: dashboard/dutil.js:175
 msgid "total"
-msgstr ""
+msgstr "összes"
 
 #: dashboard/dutil.js:177
 msgid "average"
-msgstr ""
+msgstr "átlag"
